--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <div id="mySidenav" class="sidenav">
   <a href="https://uit-econ.github.io/">Hovedside bachelor</a>
-  <a href="index_open.html" target="blank">Hjem</a>
+  <a href="index.html" target="blank">Hjem</a>
   <a href="forelesningsplan.html" style="font-size:18px"> - Forelesnings- og seminarplan</a>
   <a href="forelesninger.html" style="font-size:18px"> - Forelesningsnotater</a>
   <a href="video.html" style="font-size:18px"> - Videoer</a>
