--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,6 +4,7 @@
   <a href="forelesningsplan.html" style="font-size:18px"> - Forelesnings- og seminarplan</a>
   <a href="forelesninger.html" style="font-size:18px"> - Forelesningsnotater</a>
   <a href="video.html" style="font-size:18px"> - Videoer</a>
+  <a href="seminarplan.html" style="font-size:18px"> - Seminaroppgaver</a>
   <a href="temaer.html">Temaer/moduler</a>
   <a href="mappeevaluering.html">Innleveringer</a>
   <a href="mappeevaluering.html#frister" style="font-size:18px"> - Frister</a>
